[Refactor] Minor touch-ups